--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class = "snow"></div>
+    <div class = "snow zero">*</div>
+    <div class = "snow one">*</div>
+    <div class = "snow two">*</div>
+    <div class = "snow three">*</div>
+    <div class = "snow four">*</div>
+    <div class = "snow five">*</div>
+    <div class = "snow six">*</div>
+    <div class = "snow seven">*</div>
+    <div class = "snow eight">*</div>
+    <div class = "snow nine">*</div>
+    <div class = "snow ten">*</div>
+    <div class = "snow eleven">*</div>
+    <div class = "snow twelve">*</div>
+    <div class = "snow thirteen">*</div>
+    <div class = "snow fourteen">*</div>
+    <div class = "snow fifteen">*</div>
+    <div class = "snow sixteen">*</div>
+    <div class = "snow seventeen">*</div>
+    <div class = "snow eightteen">*</div>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
